# Projects

./: README.md
CMPT 130/Assignment 1/: fruitbasket.cpp  height.cpp
CMPT 130/Assignment 2/: habitCost.cpp  lemonade.cpp
CMPT 130/Assignment 3/: ansiicodes.h  battery.cpp  beattheroll.cpp
CMPT 130/Assignment 4/: hardDrivePerf.cpp
CMPT 130/Assignment 5/: letterCount.cpp  vectorStats.cpp
CMPT 130/Assignment 6/: Number Conversions.docx  reversing.cpp
CMPT 135/Assignment 1/: a1-4.cpp
CMPT 135/Assignment 2/: a2-3.cpp
CMPT 135/Assignment 3/: Polynomial.h
CMPT 135/Assignment 4/: IntegerQ.h  MC.h  TrueFalse.h  a4.cpp
CMPT 135/Assignment 5/: Board.h  ComputerPlayer.h  HumanPlayer.h  Player.h  main.cpp
CMPT 225/Assignment 1/: List.cpp  Patient.cpp  WICPS.cpp
CMPT 225/Assignment 2/: List.cpp  List.h  Patient.cpp  WICPS.cpp
CMPT 225/Assignment 3/: Event.cpp  Event.h  Makefile  Node.cpp  Node.h  PriorityQueue.cpp  PriorityQueue.h  Queue.cpp  Queue.h  SimulationApp.cpp
CMPT 225/Assignment 4/: BST.cpp  BST.h  dataFile.txt
CMPT 276/Iteration 1/: webapp.html
CMPT 276/Iteration 2/: git-link.html
CMPT 295/Assignment 1/: mul.s
CMPT 295/Assignment 4/: conv_arr.s
CMPT 295/Assignment 6/: lsearch_2.c  lsearch_2.s
CMPT 295/Assignment 8/: rank.c
CMPT 300/Assignment 1/: list.c  list.h  main.c  makefile  node.c  node.h
CMPT 300/Assignment 3/: makefile  simulation.c
CMPT 300/Assignment 4/: README.docx  UnixLs.c  makefile
CMPT 473/Assignment 1/googletest-exercise/test/: AwardsTests.cpp  CMakeLists.txt  HailstoneTests.cpp  TriangleTests.cpp
(+298 files in other folders)
